[Make] Parametrize gcc compiler to CC

--- a/src/c/Makefile
+++ b/src/c/Makefile
@@ -1,4 +1,6 @@
+CC = gcc
+
 compile: bfs.out
 
 %.out: %.c
-	gcc -g -o $@ -L./ds-ufc $< -lds-ufc -lm -static
+	$(CC) -g -o $@ -L./ds-ufc $< -lds-ufc -lm -static
